[metadata]
name = katsdpcontimh
description = MeerKAT+ (heterogenous primary beams) continuum imager
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpcontimh@ska.ac.za
url = https://github.com/ska-sa/katsdpcontimh
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    TODO
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
