[metadata]
name = katsdpcontimh
description = MeerKAT+ (heterogenous primary beams) continuum imager
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpcontimh@ska.ac.za
url = https://github.com/ska-sa/katsdpcontimh
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = katsdpcontimh
packages = find:
install_requires =
    astropy
    numba
    numpy
    scipy
    typing_extensions
python_requires = >=3.6

[options.packages.find]
where = katsdpcontimh

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-mock
    responses
    tornado

doc =
    sphinx
    sphinxcontrib-tikz
    sphinx-rtd-theme

[flake8]
max-line-length = 120
